<resources>
    <string name="app_name">InstaQuiz</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_test">Instant Quiz</string>
    <string name="custom_test">Custom Quiz</string>
    <string name="full_test">Assignments</string>
    <string name="count">29.</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="random_question">In the shadow of a mighty hill. The corner cases of life become troublesome?</string>
    <string name="random_option">This may be correct. </string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="action_submit">Submit</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="quiz_submit_alert">Do you want to Submit?</string>
    <string name="quiz_back_press_alert">Going back will end the test.</string>
    <string name="timer">Timer</string>
    <string name="correct">Correct : </string>
    <string name="incorrect">Incorrect : </string>
    <string name="unanswered">Unanswered : </string>
    <string name="title_activity_answers">Answers</string>
    <string name="init_text">"Welcome to InstaQuiz.\n\n"
        "Click on add icon to start a new quiz!"
    </string>
    <string name="title_activity_home">Home</string>
    <string name="start">Start</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="select_num_of_questions">Number of Questions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Logout</string>
    <string name="app_tag_line">The best learning app for students.</string>
    <string name="title_activity_practice">Practice</string>
    <string name="instant_quiz_instruction">"1. This quiz consists of 5 questions.\n2. Swipe right to go to the next question.\n3. Swipe left to go to the previous question.\n4. Click submit to end the quiz."</string>
    <string name="custom_quiz_instruction">"1. Select chapter for quiz.\n2. Select number of questions.\n3. Swipe right to go to the next question.\n4. Swipe left to go to the previous question.\n5. Click submit to end the quiz. "</string>
    <string name="title_activity_batch">Batches</string>

    <string name="from">From</string>

    <string name="to">To</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
</resources>
