<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#fafafa"
    tools:context="org.mistu.android.exam.fragment.TestTypeDialogFragment">


    <TextView
        android:id="@+id/instant_quiz"
        style="@style/TestTypeTextView"
        android:text="@string/random_test"
        />

    <TextView
        android:id="@+id/custom_test"
        style="@style/TestTypeTextView"
        android:text="@string/custom_test"
        />

    <TextView
        android:id="@+id/full_test"
        style="@style/TestTypeTextView"
        android:text="@string/full_test"
        />

</LinearLayout>
