<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="#f8f8f8"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_quiz_summary_title"
            style="@style/TestTypeTextView"
            android:layout_height="80dp"
            android:text="@string/app_name"
            android:background="@color/card_bg1"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            />

        <RelativeLayout
            android:id="@+id/marks_circle"
            android:background="@drawable/timer_circle"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="43dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/item_quiz_summary_correct_questions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/app_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_above="@+id/marks_separator_line"
                android:layout_centerInParent="true"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/marks_separator_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/card_bg1"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/item_quiz_summary_total_questions"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/marks_separator_line"
                android:layout_centerInParent="true"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                />


        </RelativeLayout>

        <TextView
            android:id="@+id/item_quiz_summary_time_taken"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="@string/timer"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="60dp"
            />


        <LinearLayout
            android:id="@+id/summary_container"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_below="@+id/item_quiz_summary_title"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_correct"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correct"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/correct_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_incorrect"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incorrect"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/incorrect_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_unanswered"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unanswered"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/unanswered_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>
</android.support.v7.widget.CardView>